--- a/htdocs/css/styles.css
+++ b/htdocs/css/styles.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "Phosph";
     src:
-      url("./assets/fonts/Phosph10.ttf");
+      url("../assets/fonts/Phosph10.ttf");
 }
 @font-face {
     font-family: "Lanenar";
     src:
-      url("./assets/fonts/LANENAR.ttf");
+      url("../assets/fonts/LANENAR.ttf");
 }
 
 :root{
@@ -84,7 +84,7 @@ body{
 }
 
 .zooSelectionCard{
-	border: 1px solid var(--white-medium);
+	border: 1px solid red;
 	box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
