--- a/htdocs/css/styles.css
+++ b/htdocs/css/styles.css
@@ -93,3 +93,21 @@ body{
     display: none;
   }
 
+
+/* ---FOOTER en bas de page--- */
+#conteneur-page {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #enveloppe-contenu {
+    padding-bottom: 2.5rem;    /* Hauteur du pied-de-page */
+  }
+  
+  #pied-de-page {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Hauteur du pied-de-page */
+  }
+
